--- a/gen.yaml
+++ b/gen.yaml
@@ -13,6 +13,6 @@ generation:
   singleTagPerOp: false
   tagNamespacingDisabled: false
 go:
-  version: 1.0.0
+  version: 1.0.2
   maxMethodParams: 0
-  packageName: conductorone-api
+  packageName: github.com/conductorone/conductorone-sdk-go
