--- a/.genignore
+++ b/.genignore
@@ -1,2 +1,10 @@
 .github
 .gitignore
+login.go
+login_test.go
+extra_sdk_options.go
+extra_sdk_options_test.go
+token_source.go
+uhttp/
+go.mod
+go.sum
