--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches:
       - main
-
+  concurrency:
+    group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+    cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,11 +19,11 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: '^1.17'
+        go-version: '^1.21.x'
 
     # Checkout the current repository
     - name: Check out current repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     # Clone the 'cone' repository
     - name: Clone 'cone' repository
@@ -39,8 +41,4 @@ jobs:
 
     # Change directory to 'cone'
     - name: Change directory to 'cone'
-      run: cd cone
-
-    # Run make
-    - name: Run make
-      run: make
+      run: cd cone; make
