--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,21 @@ jobs:
         rm -rf cone/vendor/github.com/conductorone/conductorone-sdk-go
         cp -r conductorone-sdk-go cone/vendor/github.com/conductorone/conductorone-sdk-go
 
-    # Change directory to 'cone'
+    # Change directory to 'cone' and build
     - name: Change directory to 'cone'
       run: cd cone; make
+  go-test:
+    strategy:
+      matrix:
+        go-version: [ 1.21.x ]
+        platform: [ ubuntu-latest ]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: go tests
+        run: go test -v -covermode=count -json ./... > test.json
+      - name: annotate go tests
+        if: always()
+        uses: guyarb/golang-test-annotations@v0.6.0
+        with:
+          test-results: test.json
+
