--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,30 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Setup Go environment
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: '^1.21.x'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # Checkout the current repository
-    - name: Check out current repository
-      uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'go.mod'
 
-    # Clone the 'cone' repository
-    - name: Clone 'cone' repository
-      run: git clone https://github.com/ConductorOne/cone.git
-
-    # Clone the 'conductorone-sdk-go' repository
-    - name: Clone 'conductorone-sdk-go' repository
-      run: git clone https://github.com/conductorone/conductorone-sdk-go.git
-
-    # Replace the vendored SDK in 'cone' with the checked-out version
-    - name: Replace vendored SDK
-      run: |
-        rm -rf cone/vendor/github.com/conductorone/conductorone-sdk-go
-        cp -r conductorone-sdk-go cone/vendor/github.com/conductorone/conductorone-sdk-go
-
-    # Change directory to 'cone' and build
-    - name: Change directory to 'cone'
-      run: cd cone; make
+      # Change directory to '.ci' and test the code
+      - name: Change directory to 'cone'
+        run: cd .ci; go build test.go
