--- a/.github/workflows/update_go_dependencies.yml
+++ b/.github/workflows/update_go_dependencies.yml
@@ -9,12 +9,12 @@ jobs:
 
     steps:
     - name: Check out code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
-        go-version: '1.21' # Adjust the Go version as needed
+        go-version-file: 'go.mod'
 
     - name: Update dependencies
       run: go get -u
@@ -33,7 +33,7 @@ jobs:
 
     - name: Create Pull Request
       if: steps.git_diff.outputs.has_changes == 'true'
-      uses: peter-evans/create-pull-request@v3
+      uses: peter-evans/create-pull-request@v5
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         commit-message: "Update Go dependencies"
