--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
 
       # Change directory to '.ci' and test the code
       - name: Change directory to 'cone'
-        run: go build .ci/test.go
+        run: go build - o cli ./.ci
