--- a/.genignore
+++ b/.genignore
@@ -1,6 +1,7 @@
 .github
 .gitignore
 login.go
+helpers.go
 login_test.go
 extra_sdk_options.go
 extra_sdk_options_test.go
@@ -9,3 +10,4 @@ uhttp/
 .ci
 go.mod
 go.sum
+USAGE.md
