--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build the test cli
         run: go build -o cli ./.ci
+
+      - name: Run acceptance tests
+        run: make testacc
