--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,24 +23,23 @@ jobs:
       - name: Build the test cli
         run: go build -o cli ./.ci
 
-    tests:
-      name: 'Acc. Tests (OS: ${{ matrix.os }})'
-      needs: build
-      runs-on: ${{ matrix.os }}
-      timeout-minutes: 15
+  test:
+    name: 'Acc. Tests (OS: ${{ matrix.os }})'
+    needs: build
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
 
-      strategy:
-        fail-fast: false
-        matrix:
-          os:
-            - ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
 
-      steps:
+    steps:
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+      - uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4.0.1
+        with:
+          go-version-file: 'go.mod'
 
-        - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
-        - uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4.0.1
-          with:
-            go-version-file: 'go.mod'
-
-        - name: Run acceptance test
-          run: make testacc
+      - name: Run acceptance test
+        run: make testacc
